# cosmic-applet-spotify

./: .gitignore  Cargo.toml  LICENSE  README.md  diagnose.sh  flake.nix  install.sh
.claude/: settings.local.json
data/: cosmic-applet-spotify.desktop
src/: lib.rs  main.rs  window.rs
