[package]
name = "cosmic-applet-spotify"
version = "0.1.0"
edition = "2021"

[lib]
name = "cosmic_applet_spotify"
path = "src/lib.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
  "applet",
  "tokio",
  "wayland",
] }
tokio = { version = "1.41", features = ["full"] }
async-stream = "0.3"
mpris = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"

[profile.release]
strip = true
lto = true
